refactor(backend): change modules naming
