# backend/src/shared/infrastructure/spec/swagger.json
@@ -26,12 +26,6 @@
 					},
 					"imageUrl": {
 						"type": "string"
-					},
-					"createdAt": {
-						"type": "string"
-					},
-					"updatedAt": {
-						"type": "string"
 					}
 				},
 				"required": [
@@ -40,9 +34,7 @@
 					"description",
 					"date",
 					"location",
-					"imageUrl",
-					"createdAt",
-					"updatedAt"
+					"imageUrl"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -83,8 +75,50 @@
 				],
 				"security": [],
 				"parameters": []
+			}
+		},
+		"/meetups/{id}": {
+			"get": {
+				"operationId": "GetMeetupById",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"allOf": [
+										{
+											"$ref": "#/components/schemas/MeetupModel"
+										}
+									],
+									"nullable": true
+								}
+							}
+						}
+					},
+					"400": {
+						"description": "Bad Request"
+					},
+					"404": {
+						"description": "Not found"
+					}
+				},
+				"tags": [
+					"Meetups"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			},
-			"post": {
+			"put": {
 				"operationId": "CreateMeetup",
 				"responses": {
 					"201": {
@@ -105,7 +139,16 @@
 					"Meetups"
 				],
 				"security": [],
-				"parameters": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
 				"requestBody": {
 					"required": true,
 					"content": {
@@ -141,51 +184,12 @@
 						}
 					}
 				}
-			}
-		},
-		"/meetups/{id}": {
-			"get": {
-				"operationId": "GetMeetupById",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"allOf": [
-										{
-											"$ref": "#/components/schemas/MeetupModel"
-										}
-									],
-									"nullable": true
-								}
-							}
-						}
-					},
-					"404": {
-						"description": "Not found"
-					}
-				},
-				"tags": [
-					"Meetups"
-				],
-				"security": [],
-				"parameters": [
-					{
-						"in": "path",
-						"name": "id",
-						"required": true,
-						"schema": {
-							"type": "string"
-						}
-					}
-				]
 			},
-			"put": {
+			"patch": {
 				"operationId": "UpdateMeetup",
 				"responses": {
 					"200": {
-						"description": "Ok",
+						"description": "Updated",
 						"content": {
 							"application/json": {
 								"schema": {
@@ -254,6 +258,9 @@
 				"responses": {
 					"204": {
 						"description": "No Content"
+					},
+					"400": {
+						"description": "Bad Request"
 					},
 					"404": {
 						"description": "Not found"
